--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,6 +13,7 @@ android {
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -43,7 +44,10 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.0.0'
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
+
+    /** MULTI DEX **/
+    implementation 'androidx.multidex:multidex:2.0.1'
 
     /** RX ANDROID **/
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
@@ -65,6 +69,10 @@ dependencies {
 
     /** LIVE DATA **/
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.3.1"
+
+    /** SVG LOADER **/
+    implementation 'com.github.ar-android:AndroidSvgLoader:1.0.2'
+
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
